Asset manager: Fixed asset title overlapping edit button

--- a/src/css/boom/assets/thumbs.less
+++ b/src/css/boom/assets/thumbs.less
@@ -112,6 +112,7 @@
 			transition: all 1.5s ease-in;
 			text-align: center;
 			transform: translateY(100%);
+			padding-top: 3rem;
 
 			h2, p {
 				padding: 0.75rem;
